# fastcov

example/: build.sh
test/functional/cmake_project/src/: CMakeLists.txt  foobar.h
test/functional/cmake_project/src/test/: CMakeLists.txt  ignore_test.cpp
